# skill-builder

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE-APP.md  CLAUDE-PLUGIN.md  CLAUDE.md  EVALUATION-SUMMARY.md  FEATURES.md  PLAN.md  README.md  TESTS.md  VD-529-EVALUATION-FRAMEWORK.md  package-lock.json  workflow-state.md
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
.github/: dependabot.yml
agents/: 02-research-patterns-and-merge.md  answer-evaluator.md  build.md  companion-recommender.md  confirm-decisions.md  consolidate-research.md  detailed-research.md  generate-skill.md  merge.md  reasoning.md  refine-skill.md  research-business-rules.md  research-concepts.md  research-config-patterns.md  research-data-quality.md  research-data.md  research-entities.md  research-extraction.md  research-field-semantics.md  research-historization.md  research-integration-orchestration.md  research-layer-design.md  research-lifecycle-and-state.md  research-load-merge-patterns.md  research-metrics.md  scope-advisor.md  (+16 more)
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/prompts/: README.md
app/src-tauri/src/: cleanup.rs  db.rs  fs_validation.rs  git.rs  keychain.rs  lib.rs  logging.rs  reconciliation.rs  types.rs
app/src-tauri/src/agents/: events.rs  mod.rs  sidecar.rs  sidecar_pool.rs
app/src-tauri/src/auth/: device_flow.rs  token.rs
app/src-tauri/src/commands/: agent.rs  auth.rs  chat.rs  clarification.rs  feedback.rs  files.rs  git.rs  github_auth.rs  github_import.rs  github_push.rs  imported_skills.rs  lifecycle.rs  mod.rs  node.rs  refine.rs  settings.rs  sidecar_lifecycle.rs  skill.rs  skill_test.rs  team_import.rs  test_utils.rs  usage.rs  workflow.rs  workflow_lifecycle.rs  workspace.rs
app/src-tauri/src/markdown/: clarification.rs  mod.rs  workflow_state.rs
(+726 files in other folders)
