[package]
name = "skill-builder"
version = "0.1.0"
description = "Skill Builder Desktop App"
authors = ["Hirak Banerjee"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.20"
notify = "8"
pulldown-cmark = "0.12"
regex = "1"
zip = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
log = "0.4"
dirs = "6"
