[package]
name = "skill-builder"
version = "0.1.0"
description = "Skill Builder Desktop App"
authors = ["Hirak Banerjee"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "8"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
thiserror = "2"
log = "0.4"
dirs = "6"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
git2 = "0.19"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = "3"
